--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -11,7 +11,7 @@
 
     <link href="/assets/application-f83b4042a63042bef2af4bd80e5f5bf4.css" rel="stylesheet" type="text/css">
     <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,900,400italic,600italic,700italic,900italic|Cardo:400,400italic,700" rel="stylesheet" type="text/css">
-    <link href="/public/stylesheets/home.css" rel="stylesheet" type="text/css">
+    <link href="/stylesheets/home.css" rel="stylesheet" type="text/css">
     
     <!--[if lt IE 9]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -38,7 +38,7 @@
         <div class="container intro">
             <div class="row">
                 <div class="shield span6">
-                    <img src="public/images/shield.png" alt="SiftPro shield">
+                    <img src="/images/shield.png" alt="SiftPro shield">
                 </div>
 
                 <section class="span6">
@@ -87,7 +87,7 @@
     </footer>
 
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-    <script src="http://siftpro.com/assets/application-f3056a6d159cb3b0cb844d0bc3f4308f.js"></script>
-    <script src="/public/javascripts/home.js"></script>
+    <script src="/assets/application-f3056a6d159cb3b0cb844d0bc3f4308f.js"></script>
+    <script src="/javascripts/home.js"></script>
 </body>
 </html>
