--- a/app/views/layouts/static.html.erb
+++ b/app/views/layouts/static.html.erb
@@ -1,59 +1,46 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title>Sift Pro</title>
-  <!--[if lt IE 9]>
-    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js" type="text/javascript"></script>
-  <![endif]-->
-  <%= stylesheet_link_tag    "application", :media => "all" %>
-  <%= javascript_include_tag "application" %>
-  <%= csrf_meta_tags %>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-</head>
-<body>
-  <div class="navbar navbar-fixed-top">
-    <div class="navbar-inner">
-      <div class="container">
-        <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </a>
-        <%= link_to "Sift Pro", root_path, class: "brand" %>
-        <div class="nav-collapse">
-          <ul class="nav">
-            <li<%= static_current_page(features_path) %>><%= link_to "Features", features_path %></li>
-            <li<%= static_current_page(pricing_path) %>><%= link_to "Pricing", pricing_path %></li>
-          </ul>
-          <ul class="nav pull-right">
-            <li class="divider-vertical"></li>
-            <li<%= static_current_page(signup_path) %>><%= link_to "Sign up", signup_path %></li>
-            <li<%= static_current_page(new_user_session_path) %>><%= link_to "Log in", new_user_session_path %></li>            
-          </ul>
-        </div>
-      </div>
-    </div>
-  </div>
-
-  <%= yield :hero_unit %>
-
-  <div class="container">
-    <% flash.each do |name, msg| %>
-      <div class="alert alert-<%= name == :notice ? "success" : "error" %>">
-        <a class="close" data-dismiss="alert">×</a>
-        <%= msg %>
-      </div>
-    <% end %>
+    <meta charset="UTF-8">
     
-    <div class="row">
-      <div class="span12"><%= yield %></div>
+    <title>SiftPro</title>
+
+	  <%= stylesheet_link_tag    "application", :media => "all" %>
+	  <%= javascript_include_tag "application" %>
+	  <%= csrf_meta_tags %>
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:400,600,700,900,400italic,600italic,700italic,900italic|Cardo:400,400italic,700" rel="stylesheet" type="text/css">
+    
+    <!--[if lt IE 9]>
+    <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+</head>
+
+<body>
+    <header role="banner">
+        <div class="container">
+            <div class="row">
+                <h1>SiftPro</h1>
+                <nav>
+                    <ul>
+                        <li><a href="mailto:cheroma@siftpro.com" title="Send an email using your default email client">Contact</a></li>
+                        <li><a href="/signup">Sign up</a></li>
+                        <li><a href="/login">Log in</a></li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+
+    <div role="main">
+			<%= yield %>
     </div>
-  </div>
-      
-  <footer>
-    <div class="container">
-      <p>&copy; <%= Time.now.year %> Sift Pro</p>
-    </div>
-  </footer>
+
+    <footer role="contentinfo">
+        <div class="container">
+            <p>&copy; 2012 SiftPro</p>
+        </div>
+    </footer>
 </body>
 </html>
